--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -29,9 +29,7 @@
         }
     }
 }
-*img {
-    aspect-ratio: 16/9;
-}
+
 .container {
     width: 90%;
     margin: 1% auto;
@@ -50,9 +48,36 @@
         margin: 1rem 0;
     }
     img {
-        width: 100%;
-        height: 100%;
+        width: 500px;
+        height: 300px;
         object-fit: cover;
         border-radius: 10px;
+        aspect-ratio: 16/9;
+        opacity: 0;
+        animation: fadeIn 2s ease-in-out forwards,
+            spinAndScale 4s linear infinite;
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+
+    @keyframes spinAndScale {
+        0%,
+        100% {
+            transform: rotate(0deg) scale(1);
+        }
+        25%,
+        75% {
+            transform: rotate(180deg) scale(1.1);
+        }
+        50% {
+            transform: rotate(360deg) scale(0.9);
+        }
     }
 }
